fix horizontal scroll issue

--- a/css/site.css
+++ b/css/site.css
@@ -338,6 +338,7 @@ nav {
     position: relative;
     top: -64px;
     visibility: hidden;
+    width: 10px;
 }
 
 
